--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: snpark <snpark@student.42seoul.kr>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/07/22 13:11:34 by snpark            #+#    #+#              #
-#    Updated: 2021/07/31 20:53:57 by senoi            ###   ########.fr        #
+#    Updated: 2021/08/02 14:04:24 by senoi            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,6 +15,8 @@ SRC = char_to_num.c\
 	init.c\
 	main.c\
 	timestamp.c\
+	routine.c\
+	clean.c\
 
 NAME = philo
 
@@ -24,9 +26,10 @@ $(NAME) :
 	gcc -o $(NAME) $(SRC) -lpthread
 
 clean :
+	rm $(NAME)
 
 fclean :
 
-re :
+re : clean all
 
 bonus :
